--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -58,6 +58,7 @@ image::Ui.png[width="790"]
 [[Features]]
 == Features
 
+//@@author huiminlim
 ====
 *Command Format*
 
@@ -66,6 +67,7 @@ image::Ui.png[width="790"]
 * Items with `…` after them can be used multiple times including zero times.
 * Commands are case-sensitive.
 ====
+//@author
 
 // tag::cli[]
 ====
@@ -74,7 +76,7 @@ image::Ui.png[width="790"]
 * After keying in a command, press up and down arrow keys to navigate your command history.
 * If in multiline editing mode, press (Ctrl+d) to submit the multiline text
 ====
-
+//end::cli[]
 
 // tag::help[]
 === Show help page for commands available : `help`
